# ait

./: .env.example  .gitignore  .mcp.json  .mise.toml  AGENTS.md  CLAUDE.md  README.md  justfile  nvs_sparql_server.py  pyproject.toml
docs/: vision.md
docs/analysis/: glosis-ontology-analysis.md  target-vocabularies.md
docs/architecture/: ui-information-architecture.md
docs/design/: ontology-overview-ux.md
docs/roadmap/: classification-visibility.md
src/ait/: __init__.py  cli.py  server.py  store.py  web.py
src/ait/clients/: __init__.py  nvs.py  ontoportal.py
tests/: __init__.py  conftest.py  test_api.py  test_ontoportal_format.py  test_store.py
web/: package-lock.json  package.json  svelte.config.js
web/src/lib/: api.ts  prefixContext.ts
web/src/lib/components/: ClassFocusView.svelte  ClassTree.svelte  CodeListView.svelte  DetailPanel.svelte  EntityFocusView.svelte  FocusView.svelte  GraphViewer.svelte  HierarchyBreadcrumb.svelte  IriLink.svelte  NamespaceConfig.svelte  OntologyExplorer.svelte  OntologyList.svelte  PropertyFlowView.svelte  TabPanel.svelte  TypeBadge.svelte
web/src/lib/styles/: app.css  tokens.css
web/src/routes/: +layout.js  +page.svelte
